# bttest

./: .gitmodules  CMakeLists.txt  btcheck.c  btstack_srcs.cmake  central_nrf_spp.c  examples_main.c  nordic_spp_le_streamer.h
cfg/: btstack_config.h
